# multiplayar-core

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
include/cv/: SIFT.hpp  SIFTWriter.hpp
include/environment/: Client.hpp  Entity.hpp  Environment.hpp  Object.hpp
include/server/: Server.hpp
src/: main.cpp
src/cv/: SIFT.cpp  SIFTWriter.cpp
src/environment/: Client.cpp  Entity.cpp  Environment.cpp  Object.cpp
src/server/: Server.cpp
